aoc: day 10 part 1